<resources>
    <string name="app_name">NewsApp</string>
    <string name="news_app">News App</string>
    <string name="username">Username</string>
    <string name="news_app1">News App</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in_with">or Sign In with</string>
    <string name="api_key">46c8cae3a46643349ac2b1cd524f5782</string>
    <string name="this_is_a_description" />
</resources>