<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kirenraj.MainActivity"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/tvNewsApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/news_app1"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginbtn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_secondary"
                android:text="@string/login"
                android:textSize="30sp"
                android:background="?android:attr/selectableItemBackground"
                app:cornerRadius="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/or"
                android:layout_below="@+id/loginbtn"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupbtn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/others"
                android:textSize="30sp"
                android:layout_below="@+id/loginbtn"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/sign_up"
                app:cornerRadius="0dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/others"
            android:layout_above="@id/socialicons"
            android:text="@string/or_sign_in_with"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/socialicons"
            android:layout_alignParentBottom="true"
            android:gravity="center">


            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:src="@drawable/google"/>
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:src="@drawable/fb"/>
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:src="@drawable/twitter"/>

        </LinearLayout>


    </RelativeLayout>
</layout>